# c2asm

./: CMakeLists.txt  README.md  build.sh  example_linker.ld
include/c2asm/: stdio.h  stdlib.h  string.h  unistd.h
src/: stdio.c  stdlib.c  string.c  syscall-stubs.h  unistd.c
src/arch/i386/: syscall-stubs.c
src/arch/x86_64/: syscall-stubs.c
